--- a/css/style.css
+++ b/css/style.css
@@ -9,3 +9,21 @@ table {
 .ui-draggable, .ui-droppable {
 	background-position: top;
 }
+
+.btn {
+	display: block;
+	margin-top: 10px;
+}
+
+.w200 {
+	width: 200px;
+}
+.w250 {
+	width: 250px;
+}
+.w300 {
+	width: 300px;
+}
+.w350 {
+	width: 350px;
+}
